# bazel-oci-rust

./: BUILD.bazel  WORKSPACE
